Add user id and email to views

--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -75,7 +75,7 @@
                             Email address
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            edamcheese@hitmail.com
+                            @Model.Email
                         </dd>
 
                     </div>
