Add school name to Success page

--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -33,7 +33,7 @@
             <tr>
                 <td>@response.Data.Reference</td>
                 <td>@response.Data.ChildFirstName @response.Data.ChildLastName</td>
-                <td>@response.Data.School</td>
+                <td>@response.Data.School.Name</td>
             </tr>
         }
     </tbody>
