--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -62,7 +62,7 @@
                 <p class="govuk-error-message">
                     <span asp-validation-for="ChildList[i].School.Name"></span>
                 </p>
-                <input asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds autocomplete__input autocomplete__input--default" type="text" oninput="searchSchool(this.value, @i)">
+                <input asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds autocomplete__input autocomplete__input--default" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off">
                 <input hidden asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" value="" />
                 <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" value="" />
                 <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" value=""  />
