--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             <div class="dfe-header__content" id="content-header">
                 <ul class="dfe-header__action-links">
                     <li>
-                        <a href="#" class="govuk-link govuk-link--inverse">Sign out</a>
+                        @Html.ActionLink("Sign Out", "SignOut", "Account")
                     </li>
                 </ul>
             </div>
