--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -1,8 +1,12 @@
-﻿@model CheckYourEligibility_FrontEnd.Models.FsmApplication;
+﻿@using System.Globalization
+@model CheckYourEligibility_FrontEnd.Models.FsmApplication;
 
 @{
     ViewData["Title"] = "Check Answers";
     ViewData["ServiceName"] = "Check a family's eligibility";
+
+    DateTime parentDOB = DateTime.ParseExact(Model.ParentDateOfBirth, "yyyy-MM-dd" ,CultureInfo.InvariantCulture);
+    string formattedParentDOB = parentDOB.ToString("dd/MM/yyyy");
 }
 
 @if (!ViewData.ModelState.IsValid)
@@ -40,7 +44,7 @@
                             Parent or guardian date of birth
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            @Model.ParentDateOfBirth
+                            @formattedParentDOB
                         </dd>
 
                     </div>
