--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -63,9 +63,9 @@
                     <span asp-validation-for="ChildList[i].School.Name"></span>
                 </p>
                 <input asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off">
-                <input hidden asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" value="" />
-                <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" value="" />
-                <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" value=""  />
+                <input hidden asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" />
+                <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" />
+                <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" />
                 <ul id="schoolList@(@i)" class="govuk-!-width-two-thirds"></ul>
             </div>
 
