--- a/CheckYourEligibility-Admin/Views/School/Batch_Check.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Batch_Check.cshtml
@@ -1,4 +1,4 @@
-﻿@model CheckYourEligibility_FrontEnd.Models.ParentGuardian
+﻿@model CheckYourEligibility_FrontEnd.Models.BatchCheckUpload
 
 @{
     ViewData["Title"] = "Check Details";
@@ -11,7 +11,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<form asp-controller="School" asp-action="Batch_Check" method="post">
+<form asp-controller="School" asp-action="Batch_Check" method="post" enctype="multipart/form-data">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Check free school meals – multiple students </h1>
@@ -26,7 +26,7 @@
             <h2 class="govuk-heading-m">Upload template </h2>
             <p>Please ensure you only upload a completed version of the batch check template, in csv format.  </p>
             <div class="govuk-form-group">
-                <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file" accept=".csv">
+                <input class="govuk-file-upload" id="file-upload-1" name="fileUpload" type="file" accept=".csv">
             </div>
 
             <button class="govuk-button" data-module="govuk-button">
