--- a/CheckYourEligibility-Admin/Views/School/Batch_Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Batch_Loader.cshtml
@@ -12,25 +12,10 @@
                 <p class="govuk-body-l">Please wait. This may take a few minutes</p>
 
                 <span id="counter">25</span>
-                <span>
-                    /
-                    <script>
-                        var total_count = Math.floor(Math.random() * 1000);
-                        const intervalId = setInterval(() => {
-                            var countElement = document.getElementById("counter");
-                            var currentCount = parseInt(countElement.textContent);
-                            var newCount = currentCount + 1;
-                            if (newCount >= total_count) {
-                                clearInterval(intervalId);
-                                document.location = '/current/batch-checking/batch-check-success';
-                            } else {
-                                countElement.innerHTML = newCount;
-                            }
-                        }, 100);
-                        document.write(total_count);
-                    </script>459
-                    records processed.
-                </span>
+                <span id="totalCounter">@TempData["totalCounter"]</span>/
+                <span id="currentCounter">@TempData["currentCounter"]</span>
+
+              
                 <div class="govuk-!-padding-bottom-5"></div>
             </div>
         </div>
@@ -40,9 +25,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        setTimeout(function () {
+        setInterval(function () {
             $.ajax({
-                url: '@Url.Action("Batch_Poll_Status", "School")',
+                url: '@Url.Action("Batch_loader", "School")',
                 type: 'GET',
                 success: function (data) {
                     document.open()
