--- a/CheckYourEligibility-Admin/Views/School/BatchOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/BatchOutcome/Success.cshtml
@@ -10,8 +10,8 @@
         </h1>
         <p class="govuk-body">Now download the checked file to see which parents can claim free school meals for their children.</p>
         <p>free-school-meal-outcomes-YYYMMDD.csv</p>
-        <button type="submit" class="govuk-button" data-module="govuk-button">
-            Download
-        </button>
+
+         @Html.ActionLink("Download", "Batch_check_download", "School", new { @class = "govuk-button" })
+
     </div>
 </div>
