--- a/CheckYourEligibility-Admin/Views/School/Batch_Loader.cshtml
+++ b/CheckYourEligibility-Admin/Views/School/Batch_Loader.cshtml
@@ -10,12 +10,9 @@
                     Checking
                 </h1>
                 <p class="govuk-body-l">Please wait. This may take a few minutes</p>
-
-                <span id="counter">25</span>
-                <span id="totalCounter">@TempData["totalCounter"]</span>/
-                <span id="currentCounter">@TempData["currentCounter"]</span>
-
-              
+>
+                <span id="totalCounter">@TempData["currentCounter"]</span>/
+                <span id="currentCounter">@TempData["totalCounter"] records processed.</span>
                 <div class="govuk-!-padding-bottom-5"></div>
             </div>
         </div>
@@ -26,6 +23,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         setInterval(function () {
+            
             $.ajax({
                 url: '@Url.Action("Batch_loader", "School")',
                 type: 'GET',
