--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -1,4 +1,4 @@
-@model CheckYourEligibility_Admin.Models.ApplicationSearch;
+@model CheckYourEligibility_FrontEnd.Models.ApplicationSearch
 
 <div class="govuk-grid-row">
 
@@ -31,7 +31,7 @@
                                 Child last name
                             </h6>
 
-                            <input id="ChildName" class="govuk-input" type="text" name="ChildName" value="" placeholder="Child surname">
+                            <input id="ChildLastName" class="govuk-input" type="text" name="ChildLastName" value="" placeholder="Child surname">
 
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                                 Parent or guardian last name
                             </h6>
                             <div class="autocomplete">
-                                <input id="PGName" class="countryAutocomplete govuk-input" type="text" name="PGName" value="" placeholder="Status">
+                                <input id="ParentLastName" class="countryAutocomplete govuk-input" type="text" name="ParentLastName" value="" placeholder="Status">
                             </div>
 
                         </div>
