added new page for offline form download and the associated document

--- a/CheckYourEligibility-Parent/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Index.cshtml
@@ -127,10 +127,9 @@
                         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
                     </svg>
                 </a>
-                   
-
+                <a class="govuk-footer__link" href="@Url.Action("Accessibility", "Home")">Accessibility</a>
                 <h2 class="govuk-heading-l">Other ways to apply</h2>
-                <p>If you cannot apply online, you can fill in <a href="fsm-print-version">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
+                <p>If you cannot apply online, you can fill in <a href="@Url.Action("fsm_print_version", "Home")">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p>
             </div>
         </div>
     </main>
