--- a/CheckYourEligibility-Admin/Views/Application/Search.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/Search.cshtml
@@ -66,7 +66,7 @@
                                 Reference number
                             </h6>
 
-                            <input id="ReferenceNumber" class="govuk-input" type="text" name="ReferenceNumber" value="" placeholder="Reference number">
+                            <input id="Reference" class="govuk-input" type="text" name="Reference" value="" placeholder="Reference number">
 
                         </div>
                     </div>
