--- a/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Details.cshtml
@@ -13,7 +13,7 @@
 
 <h1 class="govuk-heading-l">Enter parent or guardian details</h1>
 
-<form asp-controller="School" asp-action="Enter_Details" method="post">
+<form asp-controller="Check" asp-action="Enter_Details" method="post">
     <fieldset class="govuk-fieldset">
         <div class="govuk-form-group">
             <label class="govuk-label" for="FirstName">
