--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "School")">Check free school meals - single student</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")">Check free school meals - single student</a>
                             </h2>
                             <p>Find out if individual pupils can get free school meals.</p>
                         </div>
@@ -39,7 +39,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Process_Appeals", "School")">Process appeals</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Process_Appeals", "Application")">Process appeals</a>
                             </h2>
                             <p>Check the status of applications being appealed, and declare those ready for local authority review.</p>
                         </div>
@@ -72,7 +72,7 @@
                     <div class="dfe-card-container">
                         <div class="def-card">
                             <h2 class="govuk-heading-m">
-                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "School")">Check free school meals - single student</a>
+                                <a class="govuk-link govuk-link--no-visited-state dfe-card-link--header" href="@Url.Action("Enter_Details", "Check")">Check free school meals - single student</a>
                             </h2>
                             <p>Find out if individual pupils can get free school meals.</p>
                         </div>
